Updated update checker Reworked config.yml